<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:menuCategory="container">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_incio"
            android:title="@string/menu_home" />
        <item
            android:title="@string/grupos"
            >
            <menu>
                    <item
                        android:id="@+id/grupoHumanas"
                        android:icon="@drawable/ic_humanas"
                        android:title="@string/nome_humanas"
                        />
                    <item
                        android:id="@+id/grupoLinguagens"
                        android:icon="@drawable/ic_linguas"
                        android:title="@string/nome_linguagens"
                        />
                    <item
                        android:id="@+id/grupoMatematica"
                        android:icon="@drawable/ic_matematica"
                        android:title="@string/nome_mat"
                        />
                    <item
                        android:id="@+id/grupoNatureza"
                        android:icon="@drawable/ic_nature_people_black_24dp"
                        android:title="@string/nome_natureza"
                        />
            </menu>
        </item>

        <item
            android:title="@string/action_settings"
            >
            <menu>

                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_tools" />
                <!--<item
                    android:id="@+id/nav_slideshow"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_slideshow" />
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send" /-->
            </menu>
        </item>
    </group>

</menu>
